--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
 node_modules
 .atom/packages
 .atom/.apm
+.atom/blob-store/*
+.atom/compile-cache/*
+.atom/packages/*
+.atom/recovery/*
+.atom/storage/*
+
